--- a/.github/workflows/update-flag-status.yml
+++ b/.github/workflows/update-flag-status.yml
@@ -10,19 +10,13 @@ on:
 jobs:
   update-status:
     runs-on: ubuntu-latest
+    
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
       contents: write
       pages: write
       id-token: write
-      deployments: write
     
-    # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-    # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-    concurrency:
-      group: "pages"
-      cancel-in-progress: false
-    
-    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -58,15 +52,22 @@ jobs:
       - name: Commit and push changes
         run: |
           git add flag_status.json docs/flag_status.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update flag status" && git push origin gh-pages)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update flag status" && git push)
 
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v4
-        
+
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./docs
+          destination: ./_site
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./docs
+          path: ./_site
 
       - name: Deploy to GitHub Pages
         id: deployment
