--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,8 +1,11 @@
 source "https://rubygems.org"
 
-gem "github-pages", group: :jekyll_plugins
+gem "jekyll", "~> 3.9.3"
+gem "github-pages", "~> 228"
+gem "webrick", "~> 1.8"
 gem "jekyll-theme-minimal"
 
 group :jekyll_plugins do
   gem "jekyll-feed"
+  gem "jekyll-seo-tag"
 end
