--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,9 +5,11 @@ url: "https://jacob-booth.github.io"
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing
 exclude:
@@ -15,3 +17,15 @@ exclude:
   - Gemfile.lock
   - node_modules
   - vendor
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+
+# GitHub Pages settings
+github: [metadata]
+kramdown:
+  input: GFM
+  hard_wrap: false
+encoding: utf-8
+sass:
+  style: compressed
