Update workflow to properly handle Jekyll build and deployment

--- a/.github/workflows/update-flag-status.yml
+++ b/.github/workflows/update-flag-status.yml
@@ -61,19 +61,17 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
+          bundler-cache: true
           working-directory: docs
-
-      - name: Install Jekyll
-        working-directory: docs
-        run: |
-          gem install bundler
-          bundle install
+          cache-version: 0
 
       - name: Build site
         working-directory: docs
         env:
           JEKYLL_ENV: production
-        run: bundle exec jekyll build --baseurl "/flag-status-monitor"
+        run: |
+          bundle install
+          bundle exec jekyll build
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -83,3 +81,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
