--- a/.github/workflows/update-flag-status.yml
+++ b/.github/workflows/update-flag-status.yml
@@ -11,7 +11,6 @@ jobs:
   update-status:
     runs-on: ubuntu-latest
     
-    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
       contents: write
       pages: write
@@ -25,7 +24,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: gh-pages  # Explicitly checkout gh-pages branch
+          ref: gh-pages
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -57,33 +56,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
-          bundler-cache: true
-          working-directory: docs
-          cache-version: 0
-
-      - name: Build site
-        working-directory: docs
-        env:
-          JEKYLL_ENV: production
-        run: |
-          bundle install
-          bundle exec jekyll build --trace
-          cp -r assets _site/assets || true
-          cp -r *.js _site/ || true
-          cp -r *.css _site/ || true
-          cp flag_status.json _site/ || true
-          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_site
+          path: docs
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
