--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "U.S. Flag Status Monitor",
-  "short_name": "Flag Status",
-  "description": "Real-time monitoring of U.S. flag status based on official government sources",
+  "short_name": "Flag Monitor",
+  "description": "Real-time monitoring of U.S. flag status with official government sources, push notifications, and offline support",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -10,110 +10,118 @@
   "scope": "/",
   "lang": "en-US",
   "dir": "ltr",
-  "categories": ["government", "news", "utilities"],
+  "categories": ["government", "news", "utilities", "productivity"],
+  "screenshots": [
+    {
+      "src": "assets/screenshot-mobile.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Flag Status Monitor on mobile"
+    },
+    {
+      "src": "assets/screenshot-desktop.png", 
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Flag Status Monitor on desktop"
+    }
+  ],
   "icons": [
     {
-      "src": "src/icons/icon-72x72.png",
+      "src": "assets/icon-72x72.svg",
       "sizes": "72x72",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
+      "src": "assets/icon-96x96.svg",
+      "sizes": "96x96", 
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-128x128.png",
+      "src": "assets/icon-128x128.svg",
       "sizes": "128x128",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-144x144.png",
+      "src": "assets/icon-144x144.svg",
       "sizes": "144x144",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-152x152.png",
+      "src": "assets/icon-152x152.svg",
       "sizes": "152x152",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-192x192.png",
+      "src": "assets/icon-192x192.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-384x384.png",
+      "src": "assets/icon-384x384.svg",
       "sizes": "384x384",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "src/icons/icon-512x512.png",
+      "src": "assets/icon-512x512.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     }
   ],
   "shortcuts": [
     {
-      "name": "Check Flag Status",
-      "short_name": "Check Status",
-      "description": "Quickly check the current flag status",
-      "url": "/?action=check",
+      "name": "Refresh Status",
+      "short_name": "Refresh",
+      "description": "Refresh the current flag status",
+      "url": "/?action=refresh",
       "icons": [
         {
-          "src": "src/icons/icon-96x96.png",
-          "sizes": "96x96"
+          "src": "assets/icon-96x96.svg",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
         }
       ]
     },
     {
       "name": "View History",
-      "short_name": "History",
+      "short_name": "History", 
       "description": "View flag status history",
       "url": "/?action=history",
       "icons": [
         {
-          "src": "src/icons/icon-96x96.png",
-          "sizes": "96x96"
+          "src": "assets/icon-96x96.svg",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
         }
       ]
     }
   ],
-  "screenshots": [
-    {
-      "src": "src/images/screenshot-desktop.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Flag Status Monitor on desktop"
-    },
-    {
-      "src": "src/images/screenshot-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Flag Status Monitor on mobile"
+  "share_target": {
+    "action": "/",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
     }
-  ],
-  "prefer_related_applications": false,
-  "edge_side_panel": {
-    "preferred_width": 400
-  },
-  "launch_handler": {
-    "client_mode": "focus-existing"
   },
   "protocol_handlers": [
     {
       "protocol": "web+flagstatus",
       "url": "/?status=%s"
     }
-  ]
+  ],
+  "prefer_related_applications": false,
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 } 
