Trigger Pages deploy after status updates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,10 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
+  workflow_run:
+    workflows: ["Update Flag Status"]
+    types:
+      - completed
 
 permissions:
   contents: read
